--- a/SpeechRecognition/Base.lproj/Main.storyboard
+++ b/SpeechRecognition/Base.lproj/Main.storyboard
@@ -19,18 +19,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Uzl-S1-Kp7">
-                                <rect key="frame" x="16" y="60" width="382" height="818"/>
+                                <rect key="frame" x="16" y="60" width="414" height="740"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QgK-9v-4TI">
+                                <rect key="frame" x="16" y="816" width="382" height="30"/>
+                                <state key="normal" title="Falar"/>
+                                <connections>
+                                    <action selector="tapToSpeach:" destination="BYZ-38-t0r" eventType="touchUpInside" id="32f-hA-3Co"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Uzl-S1-Kp7" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="16" id="9PZ-Lg-svI"/>
-                            <constraint firstItem="Uzl-S1-Kp7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="IhB-6b-ZYN"/>
-                            <constraint firstItem="Uzl-S1-Kp7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="LKo-qQ-C58"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Uzl-S1-Kp7" secondAttribute="trailing" constant="16" id="o9C-sT-3tx"/>
+                            <constraint firstItem="Uzl-S1-Kp7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="7f4-x5-xVM"/>
+                            <constraint firstItem="QgK-9v-4TI" firstAttribute="top" secondItem="Uzl-S1-Kp7" secondAttribute="bottom" constant="16" id="Nou-9b-xzP"/>
+                            <constraint firstItem="QgK-9v-4TI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Ovd-59-UA5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="QgK-9v-4TI" secondAttribute="bottom" constant="16" id="bT8-Ai-43o"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QgK-9v-4TI" secondAttribute="trailing" constant="16" id="bo2-7O-ypg"/>
+                            <constraint firstItem="Uzl-S1-Kp7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="sSM-qf-cUe"/>
+                            <constraint firstItem="Uzl-S1-Kp7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="16" id="yk7-kO-hSG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
